De-emphasize search icon

--- a/public/screen.css
+++ b/public/screen.css
@@ -170,6 +170,10 @@ body {
   width: 70%;
 }
 
+.search .fa-stack {
+  color: var(--feed-icon-color)
+}
+
 .hidden {
   display: none;
   visibility: hidden;
