--- a/views/book.handlebars
+++ b/views/book.handlebars
@@ -4,10 +4,12 @@
   {{/with}}
 </ul>
 <script type="module">
+  import { Editable, Listable } from '/edit.js';
   import { Edit } from '/edit.js';
   import TomSelect from 'https://cdnjs.cloudflare.com/ajax/libs/tom-select/2.2.2/esm/tom-select.complete.min.js';
 
-  Edit.handleClick()
+  Editable.handleClick()
+  Listable.handleClick()
   
   document.querySelectorAll('.authors, .categories').forEach((element) => {
     new TomSelect(element, {
