--- a/views/authors.handlebars
+++ b/views/authors.handlebars
@@ -3,11 +3,7 @@
     <li>
         <a href="/author/{{name}}">
         {{> author}}
-        <blockquote>
-            {{#each books}}
-                <a href="/{{name}}" title="{{title}}"><img src="{{image.dataUri}}" height="90" width="60" alt="{{title}} cover"></a>
-            {{/each}}
-        </blockquote>
+        {{> cluster}}
     </li>
     {{/each}}
 </ul>
