--- a/views/categories.handlebars
+++ b/views/categories.handlebars
@@ -2,11 +2,7 @@
     {{#each categories}}
     <li>
         {{> category}}
-        <blockquote>
-            {{#each books}}
-            <a href="/{{name}}" title="{{title}}"><img src="{{image.dataUri}}" alt="{{title}} cover" height="90" width="60"></a>
-            {{/each}}
-        </blockquote>
+        {{> cluster}}
     </li>
     {{/each}}
 </ul>
