Block web crawlers

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#014BA0">
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="icon" type="image/png" href="/favicon-167.png" sizes="167x167">
     <link rel="icon" type="image/png" href="/favicon-144.png" sizes="144x144">
     <link rel="icon" type="image/png" href="/favicon-100.png" sizes="100x100">
